--- a/report.Rmd
+++ b/report.Rmd
@@ -3,8 +3,9 @@ title: Bayesian Synthetic Likelihood
 author: Thanasi Bakis, Brian Schetzsle
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 output: pdf_document
-header-includes:
-    - \usepackage{bm}
+header-includes: \usepackage{bm}
+classoption: twocolumn
+bibliography: bibliography.bib
 ---
 
 ```{r include = F}
@@ -16,169 +17,113 @@ knitr::opts_chunk$set(
     # Hide the "##" from code output
     comment = NULL,
 
-    fig.height = 6.5
+    fig.align = "center"
 )
 
 source("bsl.R")
 ```
 
-# Original paper(s)
+## Overview
 
-- Wood, S. N. (2010). Statistical inference for noisy nonlinear ecological dynamic systems. *Nature*.
-    - Introduced *synthetic likelihood* technique in a frequentist setting
-- Price, L. F., Drovandi, C. C., Lee, A., & Nott, D. J. (2018). Bayesian synthetic likelihood. *Journal of Computational and Graphical Statistics*.
-    - Extended Wood (2010) to *Bayesian synthetic likelihood* technique in a Bayesian setting
+At a high level, the synthetic likelihood function is a replacement for an intractable true likelihood.
+Synthetic likelihood originates in a frequentist setting [@wood], when the likelihood function is too irregular to easily maximize (analytically or numerically) to obtain a point estimator for parameters.
+Assuming we can at least generate samples from the true likelihood, we can maximize the synthetic likelihood instead, which yields an alternative point estimator for the parameters.
+It is trivial to extend this idea to a Bayesian setup by placing a prior on the parameters, obtaining a posterior distribution of parameters instead of point estimates [@price].
+We explore this idea of a Bayesian synthetic likelihood method.
 
-# Motivating the synthetic likelihood
+## Motivation
 
-At a high level, the synthetic likelihood is a replacement for an intractable true likelihood.
+Both @wood and @price include the Ricker population model as a motivating example for the frequentist and Bayesian synthetic likelihood methods, respectively.
+However, while the former illustrates the difficulty of maximizing the likelihood in the Ricker model, the latter focuses more on applying the method without thoroughly addressing the concerns using standard MCMC with this model.
+As a result, we attempt to seek an understanding ourselves.
 
-Synthetic likelihood originates in a *frequentist setting*, when the likelihood function is too irregular to easily maximize (analytically or numerically).
-
-Maximizing the synthetic likelihood yields a point estimator for your parameters.
-
-# Motivating the synthetic likelihood
-
-It is trivial to extend this to a Bayesian setup by placing a prior on the parameters, obtaining a posterior distribution of parameters instead of point estimates.
-
-The core requirement of the synthetic likelihood method is that we can still generate samples from the true likelihood.
-
-Upcoming motivating example from the paper: Ricker population model.
-
-(Note that the paper does not thoroughly address the concerns with this motivating example.
-We attempt to seek an understanding ourselves.)
-
-# Motivating the synthetic likelihood
-
-In the Ricker model, $N_t$ models the time course of a population, where
-\begin{align*}
-N_0 &= 1 \\
-N_t &= r N_{t-1} \mathrm{e}^{- N_{t-1} + e_{t-1}} \\
-e_t &\overset{\text{iid}}{\sim} \mathcal{N}(0, \sigma^2)
-\end{align*}
-
-In other words, $N_t | N_{t-1} \sim LogNormal(\log N_{t-1} + \log r - N_{t-1}, \sigma^2)$.
-
+In the Ricker model, $N_t$ models the time course of a population, where $N_0 = 1$ and $N_t | N_{t-1} \sim LogNormal(\log N_{t-1} + \log r - N_{t-1}, \sigma^2)$.
 Additionally, suppose $N_t$ is not actually observed, but a sample from the population $Y_t | N_t \sim Poisson(\phi N_t)$ is observed.
-
 Our parameters are thus:
 $r$, a population growth rate parameter;
 $\sigma$, controlling random noise; and
 $\phi$, a scaling parameter for sampling from the population.
 
-# Motivating the synthetic likelihood
+To do Bayesian inference via Metropolis-Hastings, we need to compute the posterior, up to the normalizing constant: $p(r, \sigma, \phi | \bm{Y}) \propto p(r, \sigma, \phi) p(\bm{Y} | r, \sigma, \phi)$.
+The question remains whether we can obtain the likelihood $p(\bm{Y} | r, \sigma, \phi)$ required.
 
-To do Bayesian inference, we need:
-
-$$p(r, \sigma, \phi | \bm{Y}) \propto p(r, \sigma, \phi) p(\bm{Y} | r, \sigma, \phi)$$
-
-Can we obtain the likelihood $p(\bm{Y} | r, \sigma, \phi)$ required?
-
-# Motivating the synthetic likelihood
-
-Let $\bm{\theta} = (r, \sigma, \phi)$.
-The joint likelihood with observed and latent variables is easier to work out:
-
+Let $\bm{\theta} = (r, \sigma, \phi)$ for notational simplicity.
+While the marginal likelihood with the observed $\bm{Y}$ is not obvious, the joint likelihood with observed and latent variables is easier to work out:
 \begin{align*}
-p(\bm{Y}, \bm{N} | \bm{\theta})
+p(&\bm{Y}, \bm{N} | \bm{\theta}) \\
 &= p(\bm{N} | \bm{\theta}) p(\bm{Y} | \bm{N}, \bm{\theta}) \\
-&= p(N_1 | \bm{\theta}) \prod_{t = 2}^n p(N_t | N_{t-1}, \bm{\theta}) \prod_{t = 1}^n p(Y_t | N_t, \bm{\theta}) \\
-&= LogNormal(N_1; ...) \prod_{t = 2}^n LogNormal(N_t; ...) \prod_{t = 1}^n Poisson(Y_t; ...)
+&= p(N_1 | \bm{\theta}) \prod_{t = 2}^n p(N_t | N_{t-1}, \bm{\theta}) \prod_{t = 1}^n p(Y_t | N_t, \bm{\theta})
 \end{align*}
 
-# Motivating the synthetic likelihood
-
-We would need to marginalize over all $N_t$:
-
+which is a product of log-normal densities and Poisson mass functions.
+This cannot be evaluated, though, since it requires values of $N_t$ that are unobserved.
+To obtain the marginal likelihood without unobserved variables, we would need to marginalize over all $N_t$:
 $$
-p(\bm{Y} | r, \sigma, \phi) =
+p(\bm{Y} | \bm{\theta}) =
 \int_{N_1} ... \int_{N_n} p(\bm{Y}, \bm{N} | \bm{\theta}) \, dN_1 ... dN_n
 $$
 
 This is expensive, in part because the number of integrals grows with the number of data points observed.
 
-# Motivating the synthetic likelihood
-
 Alternatively, instead of having the posterior $p(r, \sigma, \phi | \bm{Y})$, we could also try to do inference on the latent population variables: $p(N_1, ..., N_n, r, \sigma, \phi | \bm{Y})$.
-
 However, this would require the dimension of Metropolis-Hastings proposals to grow with the number of observed data points too (proposing values of each $N_t$).
+We think this is undesirable; @price does not address the drawbacks of traditional MCMC for this model over using the synthetic likelihood.
 
-(We think this is undesirable; the paper does not address the drawbacks of traditional MCMC for this model over using the synthetic likelihood.)
+## Methodology
 
-# Bayesian synthetic likelihood
+We now outline the method @price refers to as "Markov chain Monte Carlo Bayesian synthetic likelihood" (MCMC-BSL), which we refer to as BSL.
 
-What if, instead of targeting the posterior $p(\bm{\theta} | \bm{Y})$ in our MCMC, we target:
+BSL is essentially a Metropolis-Hastings algorithm with a different target distribution than the traditional posterior.
+Instead of targeting the posterior $p(\bm{\theta} | \bm{Y})$ in our MCMC, BSL targets $p(\bm{\theta} | \bm{s_Y})$, where $\bm{s_Y}$ is a vector of summary statistics for $\bm{Y}$ (eg. the mean, quantiles, etc.).
+This would use a so-called "synthetic likelihood" $p(\bm{s_Y} | \bm{\theta})$ in place of the true likelihood $p(\bm{Y} | \bm{\theta})$ when applying Bayes' rule, allowing us to circumvent an intractable true likelihood.
 
-$$p(\bm{\theta} | \bm{s_Y})$$
+It is important to note that the new target posterior does not necessarily approximate the original; it is more of an alternative choice.
+This is similar to obtaining a maximum synthetic likelihood estimator instead of an MLE in the frequentist setting.
+The MSLE doesn't necessarily approximate the MLE; it is an alternative.
 
-where $\bm{s_Y}$ is a vector of summary statistics for $\bm{Y}$, eg. the mean, quantiles, etc.
+Of course, depending on your choice of statistics, this synthetic likelihood may not be tractable either.
+Consequently, BSL makes a normality assumption: $\bm{s_Y} | \bm{\theta} \sim \mathcal{N}(\bm{\mu_\theta}, \bm{\Sigma_\theta})$, where $\bm{\mu}$ and $\bm{\Sigma}$ change with $\theta$.
+Ideally, the choice of statistics truly are normally distributed, but this may not be the case.
+We will see examples of both cases later.
 
-This would use a so-called "synthetic likelihood" $p(\bm{s_Y} | \bm{\theta})$ in place of the true likelihood $p(\bm{Y} | \bm{\theta})$.
-
-(This is similar to obtaining a maximum synthetic likelihood estimator instead of an MLE in the frequentist setting.
-The MSLE doesn't necessarily approximate the MLE; it is an alternative.)
-
-# Bayesian synthetic likelihood
-
-Of course, depending on your choice of statistics, this *synthetic likelihood* may not be tractable either.
-This method consequently makes a normality assumption:
-
-$$\bm{s_Y} | \bm{\theta} \sim \mathcal{N}(\bm{\mu_\theta}, \bm{\Sigma_\theta})$$
-
-where $\bm{\mu}$ and $\bm{\Sigma}$ change with $\theta$.
-
-Ideally, your statistics truly are normally distributed, but this may not be the case.
-We will see examples of both cases.
-
-# Bayesian synthetic likelihood
-
-$$\bm{s_Y} | \bm{\theta} \sim \mathcal{N}(\bm{\mu_\theta}, \bm{\Sigma_\theta})$$
-
-We still need to be able to evaluate this likelihood, though.
-
-*Under the assumption that we can sample $\bm{Y}$ from the real likelihood*, we can estimate the parameters of the synthetic likelihood via Monte Carlo approximation...
-
-Suppose we have a proposed value of $\bm{\theta}$.
+While the normality assumption presents us with a tractable distribution, we still cannot evaluate this likelihood because of the unknown $\bm{\mu_\theta}$ and $\bm{\Sigma_\theta}$ parameters.
+BSL outlines a method for estimating these parameters for any proposed value of $\theta$:
+*under the assumption that we can sample $\bm{Y}|\bm{\theta}$ from the true original likelihood*, the parameters can be estimated via Monte Carlo approximation.
 Let $\bm{Y^*_1}, ..., \bm{Y^*_n} \overset{\text{iid}}{\sim} p(\bm{Y} | \bm{\theta})$.
-
 In other words, given a proposed value of $\bm{\theta}$, generate $n$ iid datasets from the same family of distributions that also generated the observed data $\bm{Y}$.
-
-# Bayesian synthetic likelihood
-
-Now, for each simulated dataset $\bm{Y^*_i}$, calculate the corresponding summary statistics $\bm{s_{Y^*_i}}$ in the same manner as $\bm{s_Y}$.
-
-Then,
+For each simulated dataset $\bm{Y^*_i}$, calculate the corresponding summary statistics $\bm{s_{Y^*_i}}$ in the same manner as $\bm{s_Y}$.
+Then, estimate the synthetic likelihood parameters as:
 \begin{align*}
 \bm{\hat{\mu_\theta}} &= \frac{1}{n} \sum_{i = 1}^n \bm{s_{Y^*_i}} \\
 \bm{\hat{\Sigma_\theta}} &= \frac{1}{n-1} \sum_{i = 1}^n (\bm{s_{Y^*_i}} - \bm{\hat{\mu_\theta}}) (\bm{s_{Y^*_i}} - \bm{\hat{\mu_\theta}})^\top
 \end{align*}
 
-With these estimates, we can evaluate the synthetic likelihood of various proposed values of $\bm{\theta}$ for our observed summary statistics $\bm{s_Y}$.
+With these estimates, we can evaluate the synthetic likelihood of various proposed values of $\bm{\theta}$ for our observed summary statistics $\bm{s_Y}$, which, combined with a prior over $\bm{\theta}$, completes the requirements for performing Bayesian inference via Metropolis-Hastings.
 
-# Bayesian synthetic likelihood
+## Experiments
 
-```{r out.height = "80%", fig.align = "center"}
-knitr::include_graphics("images/sl_diagram.png")
-```
+@price first elaborates on the mechanism of BSL using a toy example involving a gamma-Poisson Bayesian model.
+They then demonstrate the method with the Ricker model introduced in the motivating example earlier.
+After implementing the algorithm ourselves, we attempted to reproduce these examples, as well as extend the toy example in an insightful manner.
 
-# A Toy Example
+### Gamma-Poisson model
 
-Price et. al. first elaborate on the mechanism of synthetic likelihood using an elementary toy example. Consider data drawn from a Poisson distribution, $Poisson(\lambda)$, with mean $\lambda$ and a prior distribution placed on $\lambda$ of $Gamma(\alpha, \beta)$. We are interested in performing posterior inference on $p(\lambda | \bm{Y}) \propto p(\bm{Y} | \lambda) p(\lambda)$ which is proportional to the conditional likelihood of the data, $p(\bm{Y} | \lambda)$, multiplied by the prior density of the parameter, $p(\lambda)$. The authors chose values $\lambda=30$, $\alpha=\beta=0.001$, and sample size of $N=100$ which yields a posterior distribution that can adequately be approximated by the normal distribution assumed by BSL.
+Consider data $\bm{Y}$ drawn from a Poisson distribution, $Poisson(\lambda)$ and a prior distribution placed on $\lambda \sim Gamma(\alpha, \beta)$.
+We are interested in performing posterior inference on $p(\lambda | \bm{Y}) \propto p(\bm{Y} | \lambda) p(\lambda)$.
+Suppose we observe a sample of size $N = 100$ generated using $\lambda=30$, $\alpha=\beta=0.001$.
+It is important to note that the true posterior can be derived analytically as $\lambda | \bm{Y} \sim Gamma(\alpha=0.001+\sum_{i=1}^{100}Y_i, \beta=100.001)$.
+Thus, for any choice of statistic $\bm{s_Y}$, we can compare the approximated distribution of $\lambda|\bm{s_Y}$ from BSL to the known, true posterior conditional on the full data, $\lambda|\bm{Y}$.
 
-It is important to note that the true posterior can be derived analytically:
+The authors acknowledge that this is not always the aim of BSL.
+However, when $\bm{s_Y}$ is a sufficient statistic for the sample $\bm{Y}$, the two distributions are the same.
+@price chooses the statistic to be the sample mean, $s_Y = \overline{Y}$, which is sufficient for Poisson samples.
+The sample mean also has the added benefit of approximate normality guaranteed by the central limit theorem, so the normality assumption behind BSL is satisfied.
 
-\begin{align*}
-p(\lambda | \bm{Y})
-&\propto \left[ \prod_{i=1}^{100} \frac{\lambda^{Y_i}}{Y_i!} e^{-\lambda}\right] \left[ \frac{\beta^\alpha}{\Gamma(\alpha)}\lambda^{\alpha-1}e^{-\beta\lambda}\right] \\\\
-&\propto \lambda^{\alpha+\sum_{i=1}^{100}Y_i-1}e^{-\lambda(\beta+n)} \\
-&\sim Gamma(\alpha=0.001+\sum_{i=1}^{100}Y_i, \beta=100.001)
-\end{align*}
+We run BSL and generate 1000 posterior samples of $\lambda$.
+We start at $\lambda=6$, far from the actual $\lambda=30$, so that we can see BSL converging to the true value.
+The resulting traceplot, as well as a histogram of posterior samples compared to the true analytic posterior, are shown below.
 
-Thus, for any choice of statistic $\bm{s_Y}$ we can compare the distribution of posterior samples of $\lambda|\bm{s_Y}$ to the known, true posterior conditional on the full data, $\lambda|\bm{Y}$. The authors acknowledge that this is not always the aim of BSL. However, when $\bm{s_Y}$ is a sufficient statistic for the sample $\bm{Y}$ the two distributions are the same. Price et. al. use the mean, $\bm{s_Y}=\bar{Y}$, as the statistic which is sufficient for Poisson samples. The mean also has the added benefit that the central limit theorem guarantees that means of repeated samples are normally distributed so the central assumption behing BSL is satisfied automatically.
-
-We replicate this setup and generate 1000 posterior samples of $\lambda$. We start at $\lambda=6$, far from the actual $\lambda=30$, so that we can see BSL converging to the true value. The resulting trace plot and histogram of posterior samples compared to the true analytic posterior are shown below.
-
-```{r cache=TRUE}
+```{r fig.height = 3}
 true_lambda <- 30
 
 set.seed(100)
@@ -186,7 +131,7 @@ y <- rpois(100, true_lambda)
 
 result <- readRDS("mcmc_results/mcmc_bsl_poisson_mean.rds")
 
-plot_param_traceplot(result, lambda, true_lambda) /
+plot_param_traceplot(result, lambda, true_lambda, base_size = 14) +
 result %>%
     filter(iteration >= 100) %>%
     ggplot() +
@@ -201,16 +146,22 @@ result %>%
         fill = "dodgerblue4",
         alpha = 0.5
     ) +
-    ggtitle("Posterior samples (grey) with analytic posterior (blue)") +
-    theme_minimal(base_size = 18)
+    labs(
+        title = "Posterior samples (grey)",
+        subtitle = "with analytic posterior (blue)"
+    ) +
+    theme_grey(base_size = 14)
 ```
 
-Once we had our BSL code working it was trivial to swap in different summary statistics. We continued to explore this toy problem beyond what was presented by Price et. al., next selecting the maximal value for our statistic, $\bm{s_Y} = \text{max}(\bm{Y})$. This statistic was appealing because it is easy to compute but is neither sufficient nor normally distributed, allowing us to explore the impact of a poorly-selected statistic on posterior inference. Results of the simulation are below.
+With a functioning implementation of BSL, it is trivial to swap in different summary statistics.
+We continued to explore this toy example beyond what was presented by @price, next selecting the maximal value for our statistic, $s_Y = \text{max}(\bm{Y})$.
+This statistic is appealing because it is easy to compute, but is neither sufficient nor normally distributed, allowing us to explore the impact of a poorly-selected statistic on posterior inference.
+Results of the simulation are below.
 
-```{r cache=TRUE}
+```{r fig.height = 3}
 result <- readRDS("mcmc_results/mcmc_bsl_poisson_max.rds")
 
-plot_param_traceplot(result, lambda, true_lambda) /
+plot_param_traceplot(result, lambda, true_lambda, base_size = 14) +
 result %>%
     filter(iteration >= 100) %>%
     ggplot() +
@@ -226,68 +177,65 @@ result %>%
         alpha = 0.5
     ) +
     expand_limits(x = 27) +
-    ggtitle("Posterior samples (grey) with analytic posterior (blue)") +
-    theme_minimal(base_size = 18)
+    labs(
+        title = "Posterior samples (grey)",
+        subtitle = "with analytic posterior (blue)"
+    ) +
+    theme_grey(base_size = 14)
 ```
 
-The BSL substitution resulted in posterior samples of $\lambda$ conditional on $\bm{s_Y}$ that are radically different from the distribution of $\lambda|\bm{Y}$. We looked into why this is the case and found that the maximum value in our data, $\bm{Y_{(100)}}$, was unusually large so the MCMC algorithm was identifying larger values of $\lambda$ as more likely to have generated such a large maximal statistic than the true value of $\lambda=30$. This reified for us the sensitivity of this method on the choice of statistic. Further, once a statistic is chosen if the observed data has an unusual value for this statistic posterior inference can radically differ from the truth.
+This choice of statistic resulted in posterior samples of $\lambda | s_Y$ that are radically different from the distribution of $\lambda|\bm{Y}$.
+As it turns out, the maximum value in our data, $\bm{Y_{(100)}}$, was unusually large, so the MCMC algorithm was identifying larger values of $\lambda$ as more likely to have generated such a large maximal statistic than the true value of $\lambda=30$.
+This reified for us the sensitivity of BSL on the choice of statistic.
+Further, once a statistic is chosen, if the observed data has an unusual value for this statistic, posterior inference can radically differ from the truth.
 
-We finally tried to choose a statistic that could capture much of the nuance in our model without being sufficient. We settled on the coefficients of a polynomial regression of the ordered observations
+We finally tried to choose a statistic that could capture much of the nuance in our model without being sufficient.
+We settled on the coefficients of a polynomial regression of the ordered observations: $Y_{(i)} = \beta_0 + \beta_1 i + \beta_2 i^2 + \beta_3 i^3$.
+The idea is, by fitting a curve to the ordered data, we can summarise the distribution of the data using the coefficients of the fit.
+Below is a plot of the ordered observations with the fitted regression line (the unusual value $Y_{(100)}=50$ is clearly visible).
+This curve indeed captures the general shape of the data, and our simulation confirms that this choice of statistic does lead to posterior samples of $\lambda|\bm{s_Y}$ that more closely resemble $\lambda|\bm{Y}$.
 
-$$Y_{(i)} = \beta_0 + \beta_1 i + \beta_2 i^2 + \beta_3 i^3$$
-Below is a plot of the ordered observations with the fitted regression line (the unusual value $Y_{(100)}=50$ is clearly visible). This curve captures the general shape of the data and our simulation confirmed that this choice of statistic does lead to posterior samples of $\lambda|\bm{s_Y}$ that more closely resemble $\lambda|\bm{Y}$.
-
-```{r fig.height = 4}
+```{r fig.height = 3}
 result <- readRDS("mcmc_results/mcmc_bsl_poisson_regression.rds")
 
 ggplot(mapping = aes(seq_along(y), sort(y))) +
-    geom_point() +
+    geom_point(alpha = 0.5) +
     geom_smooth(
         method = "lm",
         formula = y ~ poly(x, degree = 3),
         color = "dodgerblue4",
         se = F,
-        alpha = 0.7
+        alpha = 0.5
     ) +
     labs(
         title = "Plotting Y_(i) and the polynomial regression (blue)",
         y = "Y_(i)",
         x = "i"
     ) +
-    theme_grey(base_size = 18) +
-plot_param_traceplot(result, lambda, true_lambda) /
-plot_param_hist(result, lambda, true_lambda)
+    theme_grey(base_size = 14)
 ```
 
+```{r fig.height = 3}
+plot_param_traceplot(result, lambda, true_lambda, base_size = 14) +
+plot_param_hist(result, lambda, true_lambda, base_size = 14)
+```
 
-# Ricker population model example
+### Ricker population model example
 
-We now return to the Ricker model from the beginning of the presentation to provide a more complex use case.
-
-Some things to consider about the Ricker model vs the toy Poisson model:
-
-- The sufficient statistics are not easily available
-- We will need to rely on more complex, non-normal statistics
-
-# Ricker population model example
-
-As a refresher, recall we observe a sample $Y_t$ of a population $N_t$:
-
-\begin{align*}
-N_t | N_{t-1} &\sim LogNormal(\log N_{t-1} + \log r - N_{t-1}, \sigma^2) \\
-Y_t | N_t &\sim Poisson(\phi N_t)
-\end{align*}
+We now return to the Ricker model from the original motivating example to provide a more complex use case.
+In contrast to the toy Poisson model, the sufficient statistics of the Ricker model are not easily available.
+Furthermore, we will need to rely on more complex, non-normal statistics to summarise the data.
 
 Suppose we observe $Y_1, ..., Y_{50}$ with $(\log r, \sigma, \phi) = (3.8, 0.3, 10)$.
-
-To use synthetic likelihood, we need to ensure we can sample simulated $\bm{Y}$ from the model.
-Thankfully, sampling is straightforward; using $N_0 = 1$, you can sample $N_1, N_2, ...$ sequentially, then sample $Y_t$ for each $N_t$.
-
 We place an uninformative prior over all parameters.
 
-# Ricker population model example
+As mentioned earlier, to use BSL, we need to ensure we can sample simulated $\bm{Y}|\bm{\theta}$ from the model.
+Thankfully, sampling is straightforward;
+using $N_0 = 1$, you can sample $N_1, N_2, ...$ sequentially, then sample $Y_t$ for each $N_t$.
 
-```{r}
+We visualize the observed data $\bm{Y}$ below:
+
+```{r fig.height = 3}
 rand_ricker <- function(n, theta) {
     rand_N_t <- function(prev_N)
         rlnorm(1, log(prev_N) + theta$log_r - prev_N, theta$sigma)
@@ -324,91 +272,79 @@ ggplot(mapping = aes(seq_along(y) - 1, y)) +
         x = "t",
         y = "Y_t"
     ) +
-    theme_minimal(base_size = 18)
+    theme_grey(base_size = 14)
 ```
 
-# Ricker population model example
+This data is noisy and runs over time, yielding the question: what sorts of statistics will we use?
+@wood proposes numerous statistics that can be classified into three groups, and @price follows suit, as do we.
 
-This data is noisy and runs over time.
-What sorts of statistics will we use?
+#### Marginal distribution statistics
 
-- **Marginal distribution statistics**: to summarize the "shape" of the marginal distribution
-    - Mean: $\overline{Y}$
-    - Number of zeros: $\sum_{t = 1}^{50} \mathbf 1_{\{0\}}(Y_t)$
-- **Dynamic process statistics**: characterize the relationship between $Y_t$ and $Y_{t-1}$ (and possibly more history)
-    - Autoregressive model coefficients: $Y_t^{0.3} \sim Y_{t-1}^{0.3} + Y_{t-1}^{0.6}$
-        - Note the exponents were tuned to improve fit
-    - Coefficients of regression on ordered differences: $(Y_t - Y_{t-1}) \sim Y_t + Y_t^2 + Y_t^3$
-- **Time series statistics**: sensitive to the shape and period of fluctuations
-    - Coefficients of the autocovariance function, up to lag 5
+These summarize the "shape" of the marginal distribution.
+We use two of these statistics:
+the sample mean, $\overline{Y}$; and
+the number of zeroes observed, $\sum_{t = 1}^{50} \mathbf 1_{\{0\}}(Y_t)$.
 
-# Ricker population model example
+#### Dynamic process statistics
 
-```{r}
-(plot_param_traceplot(result, log_r, true_theta$log_r) +
-plot_param_traceplot(result, phi, true_theta$phi)) /
-(plot_param_traceplot(result, sigma, true_theta$sigma) +
-plot_log_prob_traceplot(result))
+These characterize the relationship between $Y_t$ and $Y_{t-1}$ (and possibly more history).
+We use the coefficients of two regression models as statistics:
+an autoregressive model, $Y_t^{0.3} \sim Y_{t-1}^{0.3} + Y_{t-1}^{0.6}$; and
+a regression on ordered differences, $(Y_t - Y_{t-1}) \sim Y_t + Y_t^2 + Y_t^3$.
+Note that the exponents of the autoregressive model were tuned by @wood to improve fit.
+
+#### Time series statistics
+
+These are sensitive to the shape and period of fluctuations.
+We use the coefficients of the autocovariance function, up to lag 5, as statistics.
+
+The results of BSL on this model with all these statistics together are showen below:
+
+```{r fig.height = 7}
+(plot_param_traceplot(result, log_r, true_theta$log_r, base_size = 14) +
+plot_param_traceplot(result, phi, true_theta$phi, base_size = 14)) /
+(plot_param_traceplot(result, sigma, true_theta$sigma, base_size = 14) +
+plot_param_hist(result, log_r, true_theta$log_r, base_size = 14)) /
+(plot_param_hist(result, phi, true_theta$phi, base_size = 14) +
+plot_param_hist(result, sigma, true_theta$sigma, base_size = 14))
 ```
 
-# Ricker population model example
+As we can see, the chains appear to converge, but some of the distributions are a bit shifted from the true parameter values.
+This could be due to our data having extreme statistic values, a phenomenon seen earlier in the Poisson toy example with the maximal statistic.
+It is also worth noting that we ran BSL on this model for around 125,000 iterations, whereas @price ran it for 500,000 iterations.
 
-```{r}
-(plot_param_hist(result, log_r, true_theta$log_r) +
-plot_param_hist(result, phi, true_theta$phi)) /
-(plot_param_hist(result, sigma, true_theta$sigma) +
-ggplot() + theme_void())
-```
+## Discussion
 
-# Alternative methodology
+### Alternative methodology
 
-A common method used when likelihoods are intractable is approximate Bayesian computation (ABC).
-
+A common method used when likelihoods are intractable is approximate Bayesian computation (ABC) [@sisson].
 ABC is very similar to Bayesian synthetic likelihood (BSL), but it replaces the normality assumption of $\bm{s_Y} | \bm{\theta}$ with a nonparametric likelihood:
-
 $$
 p(\bm{s_Y} | \bm{\theta}) = \frac{1}{n} \sum_{i = 1}^n K_\epsilon (\rho(\bm{s_Y}, \bm{s_{Y^*_i}}))
 $$
 
 where $\bm{Y^*_i}$ are the Monte Carlo simulated datasets, $\rho$ is a distance measure, and $K_\epsilon$ is a kernel weighting function with bandwidth $\epsilon$.
 
-# Alternative methodology
+@price offers a few points of comparison between BSL and ABC:
+(1) the BSL posterior fell in the vicinity of the ABC posterior for the Ricker example, despite the non-normality of the summary statistics used;
+(2) ABC has two tuning parameters (the number of Monte Carlo samples $n$, and the bandwidth $\epsilon$), where as BSL only has one ($n$); and
+(3) the curse of dimensionality impacts ABC more than BSL due to its nonparametric nature.
 
-The paper's comparison of BSL and ABC:
+Note that we did not implement ABC, since the @price noted that experiments involving ABC needed to be run for 25 million iterations.
 
-- The BSL posterior fell in the vicinity of the ABC posterior for the Ricker example, despite the non-normality of the summary statistics used
-- ABC has two tuning parameters (the number of Monte Carlo samples $n$, and the bandwidth $\epsilon$), where as BSL only has one ($n$)
-- The curse of dimensionality impacts ABC more than BSL due to its nonparametric nature
+### Reflecting on this paper
 
-(We did not implement ABC, since the BSL paper noted it ran ABC for 25 million iterations...)
+Finally, we briefly discuss some strengths and points of improvements for @price.
 
-# Reflecting on this paper
+Regarding strengths of the paper, we appreciated that the authors provided implementations for their algorithm and experiments.
+While we found their codebase after implementing the algorithm and examples ourselves, it proved instrumental in debugging our code and getting the examples running.
+Additionally, we applauded the examples provided in the paper, which appropriately increased in complexity to demonstrate BSL (from having an analytical posterior available, to lacking this and requiring a violation of the normality assumption).
 
-We briefly discuss strengths and points of improvements for the BSL paper:
+For points of improvement, we feel the authors did not seem to thorougly discuss the limitations of BSL, particularly when it came to the choice of statistic.
+As previously discussed, we did a bit of further exploration with the Poisson example to see which choices of statistics could cause BSL to underperform.
+Additionally, we feel the authors did not extensively motivate the use of a synthetic likelihood in a Bayesian setting very well.
+While @wood explained the difficulties using the maximum likelihood framework for the Ricker example, @price seemed to merely extend the synthetic likelihood framework to the Bayesian setting without thorough reason.
 
-Strengths:
+\onecolumn
 
-- The authors provided implementations for their algorithm and experiments
-    - We found this after implementing the algorithm and examples ourselves
-- The examples given appropriately increased in complexity
-    - The toy Poisson example used simple statistics and provided an analytical posterior to compare to
-    - The Ricker example demonstrated the method's abilities with more complex statistics
-
-# Reflecting on this paper
-
-Points of improvement:
-
-- The authors provided implementation in Matlab (kidding...)
-- The paper did not thorougly discuss the limitations of BSL, particularly when it came to the choice of statistic
-- The paper did not motivate the use of synthetic likelihood in a Bayesian setting very well, beyond *"It is trivial to consider a Bayesian version of this"*
-
-# References
-
-- Wood, S. N. (2010). Statistical inference for noisy nonlinear ecological dynamic systems. *Nature*.
-- Price, L. F., Drovandi, C. C., Lee, A., & Nott, D. J. (2018). Bayesian synthetic likelihood. *Journal of Computational and Graphical Statistics*.
-- Sisson, S. A. (2011). Likelihood-free markov chain monte carlo. *Handbook of Markov Chain Monte Carlo*.
-    - Discusses *approximate Bayesian computation (ABC)*
-
-# Thank you
-
-Thank you for listening!
+## References
